# poetry-redundant-includes

./: README.md
broken-example/: pyproject.toml
working-example/: pyproject.toml  repro.sh
working-example/deprecated/: os_helper.py
working-example/helpers/: os_helper.py
