[tool.poetry]
name = "helpers"
version = "0.1.0"
description = ""
authors = ["Someone Smith <ssmith@somewhere.com>"]

packages = [
    { include = "helpers" },
    { include = "os_helper.py", from = 'deprecated' }
]


[tool.poetry.dependencies]
python = ">=3.6"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
